# rustlings

./: .gitignore  Cargo.toml
exercises/: quiz2.rs  quiz3.rs
exercises/01_variables/: variables2.rs
exercises/04_primitive_types/: primitive_types2.rs
exercises/05_vecs/: vecs1.rs
exercises/06_move_semantics/: move_semantics4.rs  move_semantics6.rs
exercises/07_structs/: structs1.rs
exercises/08_enums/: enums2.rs  enums3.rs
exercises/11_hashmaps/: hashmaps2.rs  hashmaps3.rs
exercises/12_options/: options1.rs  options2.rs
exercises/13_error_handling/: errors3.rs  errors4.rs  errors6.rs
exercises/18_iterators/: iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
exercises/20_threads/: threads2.rs  threads3.rs
exercises/22_clippy/: clippy3.rs
exercises/23_conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
